<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.magda.jakatoliczba.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello_first_inscription"
        android:id="@+id/helloTextView"
        android:layout_marginTop="@dimen/main_activity_new_game_text_view_top_margin"
        android:textAlignment="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playMenu"
        android:id="@+id/playButton"
        android:backgroundTint="@color/colorPrimaryLight"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/optionsMenu"
        android:id="@+id/optionsButton"
        android:layout_below="@id/playButton"
        android:backgroundTint="@color/colorPrimaryLight"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rulesMenu"
        android:id="@+id/rulesButton"
        android:layout_below="@id/optionsButton"
        android:backgroundTint="@color/colorPrimaryLight"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/highscoresMenu"
        android:id="@+id/highscoresButton"
        android:layout_below="@id/rulesButton"
        android:backgroundTint="@color/colorPrimaryLight"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exitMenu"
        android:id="@+id/exitButton"
        android:layout_below="@id/highscoresButton"
        android:backgroundTint="@color/colorPrimaryLight"/>


</RelativeLayout>
